--- a/RestApiSelami/appsettings.json
+++ b/RestApiSelami/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LieuxContextConnectionString": "server=RYMA\\SQLEXPRESS;database=LieuxDb;Trusted_connection=true"
+    "LieuxContextConnectionString": "Server=tcp:lieuxbdd.database.windows.net,1433;Initial Catalog=LieuxDb;Persist Security Info=False;User ID=lieuxbdd;Password=Samysamy13299;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
