--- a/RestApiSelami/appsettings.json
+++ b/RestApiSelami/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LieuxContextConnectionString": "Server=tcp:lieuxbdd.database.windows.net,1433;Initial Catalog=LieuxDb;Persist Security Info=False;User ID=lieuxbdd;Password=Samysamy13299;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "LieuxContextConnectionString": "Server=tcp:34.121.113.160;Initial Catalog=LieuxDb;Persist Security Info=False;User ID=sqlserver;Password=samysamy;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
