--- a/RestApiSelami/appsettings.json
+++ b/RestApiSelami/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LieuxContextConnectionString": "Server=tcp:34.121.113.160;Initial Catalog=lieuxdb;Persist Security Info=True;User ID=sqlserver;Password=samysamy;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "LieuxContextConnectionString": "Server=34.121.113.160;Initial Catalog=lieuxdb;Persist Security Info=True;User ID=sqlserver;Password=samysamy;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
   }
 }
